--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,62 @@
+/* basic settings */
 * {
     box-sizing: border-box;
 }
 
 :root {
     --font-family-primary: 'Nunito Sans', sans-serif;
+    --font-size-button: 14px;
+    --font-size-body: 16px;
+    --font-size-logo: 35px;
+
+    --font-weight-regular: 400;
+    --font-weight-bold: 700;
+    --font-weight-extrabold: 800;
+    --font-weight-black: 900;
     --color-white: #fff;
     --color-red: #ff0000;
+
+    --bg-semi-black: rgba(0, 0, 0, 0.5);
+    --bg-semi-white: rgba(255, 255, 255, 0.3);
 }
 
 body {
     font-family: var(--font-family-primary);
+    font-weight: var(--font-weight-regular);
     color: var(--color-white);
+    font-size: var(--font-size-body);
 }
-
-button {
+/* commons */
+.button {
     display: inline-block;
-    appearance: none;
-    border: none;
-    outline: none;
     text-transform: uppercase;
-    color: var(--color-white);
     cursor: pointer;
+    border-radius: 12px;
+    padding: 12px 21px;
+    font-size: var(--font-size-button);
 }
 
-button:hover {
+.button:hover {
     opacity: 0.9;
 }
-
-button:active {
+.button:active {
     opacity: 0.8;
+}
+.button + .button {
+    margin-left: 16px;
+}
+.button--primary {
+    color: var(--color-white);
+    background-color: var(--color-red);
+}
+.button--secondary {
+    background-color: var(--color-white);
+    color: var(--color-red);
+}
+.button--lg {
+    border-radius: 24px;
+    padding: 24px 42px;
+    font-size: var(--font-size-body);
 }
 
 .container {
@@ -36,59 +64,90 @@ button:active {
     margin: 0 auto;
 }
 
+.link {
+    color: var(--color-white);
+    text-decoration: none;
+}
+
+.text-red {
+    color: var(--color-red);
+}
+
 /* page styles */
+.topbar {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+
+    background: var(--bg-semi-black);
+}
+
+.topbar__content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.topbar__logo {
+    display: inline-flex;
+    font-size: var(--font-size-logo);
+    font-weight: var(--font-weight-bold);
+    column-gap: 8px;
+    align-items: center;
+    text-transform: uppercase;
+}
+
+.navmenu {
+    display: flex;
+    list-style-type: none;
+}
+
+.navmenu__item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    text-transform: uppercase;
+
+    width: 128px;
+    height: 88px;
+}
+
+.navmenu__item--active {
+    background: var(--bg-semi-white);
+}
+
+.navmenu__item:hover {
+    background: var(--bg-semi-white);
+}
+
 .home {
     width: 100vw;
     height: 100vh;
-
-    background: url('/images/Image.png') no-repeat;
+    background: url('/images/background.png') no-repeat;
     background-size: cover;
-
     text-align: center;
 }
-
 .home__background {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     width: 100%;
     height: 100%;
-
-    background-color: rgba(0, 0, 0, 0.4);
+    background: var(--bg-semi-black);
 }
-
 .home__heading {
-    font-weight: 900;
+    font-weight: var(--font-weight-black);
     font-size: 90px;
     text-transform: uppercase;
-
-    margin-bottom: 10px;
+    margin-bottom: 28px;
 }
-
 .home__paragraph {
     line-height: 22px;
-    font-size: 16px;
 }
-
 .home__buttons {
     margin-top: 48px;
 }
 
-.home__button {
-    border-radius: 24px;
-    padding: 24px 42px;
-    font-size: 16px;
-    margin-right: 16px;
-}
-
-.home__button--red {
-    background-color: var(--color-red);
-    color: var(--color-white);
-}
-
-.home__button--white {
-    background-color: var(--color-white);
-    color: var(--color-red);
-}
