--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,16 @@
     --font-family-primary: 'Nunito Sans', sans-serif;
     --font-size-button: 14px;
     --font-size-body: 16px;
-    --font-size-logo: 35px;
-
+    --font-size-lg: 19px;
+    --font-size-xl: 35px;
     --font-weight-regular: 400;
     --font-weight-bold: 700;
     --font-weight-extrabold: 800;
     --font-weight-black: 900;
     --color-white: #fff;
     --color-red: #ff0000;
+    --color-black: #000;
+    --color-gray: #6A6A6A;
 
     --bg-semi-black: rgba(0, 0, 0, 0.5);
     --bg-semi-white: rgba(255, 255, 255, 0.3);
@@ -33,6 +35,7 @@ body {
     cursor: pointer;
     border-radius: 12px;
     padding: 12px 21px;
+    border: none;
     font-size: var(--font-size-button);
 }
 
@@ -58,6 +61,29 @@ body {
     padding: 24px 42px;
     font-size: var(--font-size-body);
 }
+.button--icon {
+    border-radius: 50%;
+    padding: 16px;
+}
+.card__image, .card__title, .card__content {
+    margin-bottom: 24px;
+}
+
+.card {
+    color: var(--color-gray);
+}
+
+.card__title {
+    font-size: var(--font-size-lg);
+    text-transform: uppercase;
+}
+
+.card__content {
+    font-size: var(--font-size-button);
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+}
+
 
 .container {
     max-width: 1046px;
@@ -75,7 +101,7 @@ body {
 
 /* page styles */
 .topbar {
-    position: fixed;
+    position: absolute;
     width: 100%;
     top: 0;
     left: 0;
@@ -90,7 +116,7 @@ body {
 
 .topbar__logo {
     display: inline-flex;
-    font-size: var(--font-size-logo);
+    font-size: var(--font-size-xl);
     font-weight: var(--font-weight-bold);
     column-gap: 8px;
     align-items: center;
@@ -123,8 +149,8 @@ body {
 }
 
 .home {
-    width: 100vw;
-    height: 100vh;
+    height: 94vh;
+    margin-bottom: 48px;
     background: url('/images/background.png') no-repeat;
     background-size: cover;
     text-align: center;
@@ -150,4 +176,61 @@ body {
 .home__buttons {
     margin-top: 48px;
 }
+
+@keyframes bounce {
+    0%   { transform: translateY(0); }
+    50%  { transform: translateY(-10px); }
+    100% { transform: translateY(0); }
+}
+
+.home__arrow {
+    position: relative;
+    bottom: 24px;
+    animation: bounce 1.2s infinite;
+}
+
+.blog {
+    color: var(--color-black);
+    margin-bottom: 48px;
+    padding: 48px;
+}
+
+.blog__heading {
+    position: relative;
+    font-size: var(--font-size-xl);
+    font-weight: var(--font-weight-bold);
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 48px;
+}
+
+.blog__heading::before,
+.blog__heading::after {
+    content: "";
+    position: absolute;
+    width: 50px;
+    top: 14px;
+    border-top: 3px solid var(--color-red);
+}
+
+.blog__heading::before {
+    left: calc(50% - 110px);
+}
+
+.blog__heading::after {
+    right: calc(50% - 110px);
+}
+
+.blog__columns {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 16px;
+}
+
+.blog__column {
+    flex: 1;
+}
+
+
 
